:hammer: fix:pages-top-gap

--- a/src/index.css
+++ b/src/index.css
@@ -6,5 +6,5 @@
 
 /* === global styles === */
 .pages {
-  @apply mt-[64px];
+  @apply mt-[60px];
 }
